[project]
name = "act"
dynamic = ["version"]
description = "Python wrapper for nektos/act"
readme = "README.md"
license = "MIT"
requires-python = ">=3"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[tool.setuptools.dynamic]
version = {file = ["VERSION"]}
